--- a/src/components/FAQ/FAQCard.css
+++ b/src/components/FAQ/FAQCard.css
@@ -22,7 +22,7 @@
 
 .faq-heading {
   font-family: "Base Neue Bold";
-  font-size: 3em;
+  font-size: 3.5rem;
   font-weight: bold;
 }
 .faq-container {
@@ -89,7 +89,7 @@
   transform: rotate(0deg);
 }
 
-@media (max-width: 1300px) {
+@media screen and (max-width: 1300px) {
   .faq-container {
     border-radius: 30px;
     backdrop-filter: none;
@@ -100,12 +100,13 @@
   }
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .faq-container {
     border-radius: 0;
+    padding: 0;
   }
   .faq-heading {
-    font-size: 2em;
+    font-size: 2.5rem;
   }
   .faq-container {
     width: 100%;
